synthesis/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT
    GUARD

Grammar

Rule 0     S' -> input
Rule 1     input -> MODULE NAME CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form
Rule 2     input -> MODULE ENVIRONMENT CONTROL var_y INIT init_y UPDATE update_y
Rule 3     input -> input input
Rule 4     input -> input PROPF prop_form
Rule 5     var_y -> NAME
Rule 6     var_y -> var_y COMMA var_y
Rule 7     init_y -> DCOL init_command
Rule 8     init_y -> init_y DCOL init_command
Rule 9     init_command -> init_condition ASSIGN init_next_state
Rule 10    init_condition -> TRUE
Rule 11    init_next_state -> NAME NEXT EQUALS TRUE
Rule 12    init_next_state -> NAME NEXT EQUALS FALSE
Rule 13    init_next_state -> init_next_state COMMA init_next_state
Rule 14    init_next_state -> init_next_state SEMICOLON
Rule 15    update_command -> update_condition ASSIGN update_next_state
Rule 16    update_y -> DCOL update_command
Rule 17    update_y -> update_y DCOL update_command
Rule 18    update_condition -> formula_guard
Rule 19    update_condition -> update_condition COMMA update_condition
Rule 20    formula_guard -> NAME
Rule 21    formula_guard -> TRUE
Rule 22    formula_guard -> FALSE
Rule 23    formula_guard -> formula_guard OR formula_guard
Rule 24    formula_guard -> formula_guard AND formula_guard
Rule 25    formula_guard -> formula_guard IMPLIES formula_guard
Rule 26    formula_guard -> formula_guard IFF formula_guard
Rule 27    formula_guard -> NOT formula_guard
Rule 28    formula_guard -> LB formula_guard RB
Rule 29    update_next_state -> NAME NEXT EQUALS formula_assign
Rule 30    update_next_state -> update_next_state COMMA update_next_state
Rule 31    update_next_state -> update_next_state SEMICOLON
Rule 32    formula_assign -> NAME
Rule 33    formula_assign -> TRUE
Rule 34    formula_assign -> FALSE
Rule 35    formula_assign -> formula_assign OR formula_assign
Rule 36    formula_assign -> formula_assign AND formula_assign
Rule 37    formula_assign -> formula_assign IMPLIES formula_assign
Rule 38    formula_assign -> formula_assign IFF formula_assign
Rule 39    formula_assign -> NOT formula_assign
Rule 40    formula_assign -> LB formula_assign RB
Rule 41    goal_form -> DCOL gf SEMICOLON
Rule 42    gf -> NAME
Rule 43    gf -> TRUE
Rule 44    gf -> FALSE
Rule 45    gf -> gf OR gf
Rule 46    gf -> gf AND gf
Rule 47    gf -> gf IMPLIES gf
Rule 48    gf -> gf IFF gf
Rule 49    gf -> G gf
Rule 50    gf -> F gf
Rule 51    gf -> X gf
Rule 52    gf -> gf U gf
Rule 53    gf -> NOT gf
Rule 54    gf -> LB gf RB
Rule 55    prop_form -> DCOL pf SEMICOLON
Rule 56    pf -> NAME
Rule 57    pf -> TRUE
Rule 58    pf -> FALSE
Rule 59    pf -> pf OR pf
Rule 60    pf -> pf AND pf
Rule 61    pf -> pf IMPLIES pf
Rule 62    pf -> pf IFF pf
Rule 63    pf -> G pf
Rule 64    pf -> F pf
Rule 65    pf -> X pf
Rule 66    pf -> pf U pf
Rule 67    pf -> NOT pf
Rule 68    pf -> LB pf RB

Terminals, with rules where they appear

AND                  : 24 36 46 60
ASSIGN               : 9 15
COMMA                : 6 13 19 30
COMMENT              : 
CONTROL              : 1 2
DCOL                 : 7 8 16 17 41 55
ENVIRONMENT          : 2
EQUALS               : 11 12 29
F                    : 50 64
FALSE                : 12 22 34 44 58
G                    : 49 63
GOAL                 : 1
GUARD                : 
IFF                  : 26 38 48 62
IMPLIES              : 25 37 47 61
INIT                 : 1 2
LB                   : 28 40 54 68
MODULE               : 1 2
NAME                 : 1 5 11 12 20 29 32 42 56
NEXT                 : 11 12 29
NOT                  : 27 39 53 67
OR                   : 23 35 45 59
PROPF                : 4
RB                   : 28 40 54 68
SEMICOLON            : 14 31 41 55
TRUE                 : 10 11 21 33 43 57
U                    : 52 66
UPDATE               : 1 2
X                    : 51 65
error                : 

Nonterminals, with rules where they appear

formula_assign       : 29 35 35 36 36 37 37 38 38 39 40
formula_guard        : 18 23 23 24 24 25 25 26 26 27 28
gf                   : 41 45 45 46 46 47 47 48 48 49 50 51 52 52 53 54
goal_form            : 1
init_command         : 7 8
init_condition       : 9
init_next_state      : 9 13 13 14
init_y               : 1 2 8
input                : 3 3 4 0
pf                   : 55 59 59 60 60 61 61 62 62 63 64 65 66 66 67 68
prop_form            : 4
update_command       : 16 17
update_condition     : 15 19 19
update_next_state    : 15 30 30 31
update_y             : 1 2 17
var_y                : 1 2 6 6

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> . MODULE NAME CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form
    (2) input -> . MODULE ENVIRONMENT CONTROL var_y INIT init_y UPDATE update_y
    (3) input -> . input input
    (4) input -> . input PROPF prop_form

    MODULE          shift and go to state 2

    input                          shift and go to state 1

state 1

    (0) S' -> input .
    (3) input -> input . input
    (4) input -> input . PROPF prop_form
    (1) input -> . MODULE NAME CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form
    (2) input -> . MODULE ENVIRONMENT CONTROL var_y INIT init_y UPDATE update_y
    (3) input -> . input input
    (4) input -> . input PROPF prop_form

    PROPF           shift and go to state 4
    MODULE          shift and go to state 2

    input                          shift and go to state 3

state 2

    (1) input -> MODULE . NAME CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form
    (2) input -> MODULE . ENVIRONMENT CONTROL var_y INIT init_y UPDATE update_y

    NAME            shift and go to state 5
    ENVIRONMENT     shift and go to state 6


state 3

    (3) input -> input input .
    (3) input -> input . input
    (4) input -> input . PROPF prop_form
    (1) input -> . MODULE NAME CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form
    (2) input -> . MODULE ENVIRONMENT CONTROL var_y INIT init_y UPDATE update_y
    (3) input -> . input input
    (4) input -> . input PROPF prop_form

  ! shift/reduce conflict for PROPF resolved as shift
  ! shift/reduce conflict for MODULE resolved as shift
    $end            reduce using rule 3 (input -> input input .)
    PROPF           shift and go to state 4
    MODULE          shift and go to state 2

  ! PROPF           [ reduce using rule 3 (input -> input input .) ]
  ! MODULE          [ reduce using rule 3 (input -> input input .) ]

    input                          shift and go to state 3

state 4

    (4) input -> input PROPF . prop_form
    (55) prop_form -> . DCOL pf SEMICOLON

    DCOL            shift and go to state 8

    prop_form                      shift and go to state 7

state 5

    (1) input -> MODULE NAME . CONTROL var_y INIT init_y UPDATE update_y GOAL goal_form

    CONTROL         shift and go to state 9


state 6

    (2) input -> MODULE ENVIRONMENT . CONTROL var_y INIT init_y UPDATE update_y

    CONTROL         shift and go to state 10


state 7

    (4) input -> input PROPF prop_form .

    PROPF           reduce using rule 4 (input -> input PROPF prop_form .)
    MODULE          reduce using rule 4 (input -> input PROPF prop_form .)
    $end            reduce using rule 4 (input -> input PROPF prop_form .)


state 8

    (55) prop_form -> DCOL . pf SEMICOLON
    (56) pf -> . NAME
    (57) pf -> . TRUE
    (58) pf -> . FALSE
    (59) pf -> . pf OR pf
    (60) pf -> . pf AND pf
    (61) pf -> . pf IMPLIES pf
    (62) pf -> . pf IFF pf
    (63) pf -> . G pf
    (64) pf -> . F pf
    (65) pf -> . X pf
    (66) pf -> . pf U pf
    (67) pf -> . NOT pf
    (68) pf -> . LB pf RB

    NAME            shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14
    G               shift and go to state 15
    F               shift and go to state 16
    X               shift and go to state 17
    NOT             shift and go to state 18
    LB              shift and go to state 19

    pf                             shift and go to state 11

state 9

    (1) input -> MODULE NAME CONTROL . var_y INIT init_y UPDATE update_y GOAL goal_form
    (5) var_y -> . NAME
    (6) var_y -> . var_y COMMA var_y

    NAME            shift and go to state 20

    var_y                          shift and go to state 21

state 10

    (2) input -> MODULE ENVIRONMENT CONTROL . var_y INIT init_y UPDATE update_y
    (5) var_y -> . NAME
    (6) var_y -> . var_y COMMA var_y

    NAME            shift and go to state 20

    var_y                          shift and go to state 22

state 11

    (55) prop_form -> DCOL pf . SEMICOLON
    (59) pf -> pf . OR pf
    (60) pf -> pf . AND pf
    (61) pf -> pf . IMPLIES pf
    (62) pf -> pf . IFF pf
    (66) pf -> pf . U pf

    SEMICOLON       shift and go to state 23
    OR              shift and go to state 24
    AND             shift and go to state 25
    IMPLIES         shift and go to state 26
    IFF             shift and go to state 27
    U               shift and go to state 28


state 12

    (56) pf -> NAME .

    SEMICOLON       reduce using rule 56 (pf -> NAME .)
    OR              reduce using rule 56 (pf -> NAME .)
    AND             reduce using rule 56 (pf -> NAME .)
    IMPLIES         reduce using rule 56 (pf -> NAME .)
    IFF             reduce using rule 56 (pf -> NAME .)
    U               reduce using rule 56 (pf -> NAME .)
    RB              reduce using rule 56 (pf -> NAME .)


state 13

    (57) pf -> TRUE .

    SEMICOLON       reduce using rule 57 (pf -> TRUE .)
    OR              reduce using rule 57 (pf -> TRUE .)
    AND             reduce using rule 57 (pf -> TRUE .)
    IMPLIES         reduce using rule 57 (pf -> TRUE .)
    IFF             reduce using rule 57 (pf -> TRUE .)
    U               reduce using rule 57 (pf -> TRUE .)
    RB              reduce using rule 57 (pf -> TRUE .)


state 14

    (58) pf -> FALSE .

    SEMICOLON       reduce using rule 58 (pf -> FALSE .)
    OR              reduce using rule 58 (pf -> FALSE .)
    AND             reduce using rule 58 (pf -> FALSE .)
    IMPLIES         reduce using rule 58 (pf -> FALSE .)
    IFF             reduce using rule 58 (pf -> FALSE .)
    U               reduce using rule 58 (pf -> FALSE .)
    RB              reduce using rule 58 (pf -> FALSE .)


state 15

    (63) pf -> G . pf
    (56) pf -> . NAME
    (57) pf -> . TRUE
    (58) pf -> . FALSE
    (59) pf -> . pf OR pf
    (60) pf -> . pf AND pf
    (61) pf -> . pf IMPLIES pf
    (62) pf -> . pf IFF pf
    (63) pf -> . G pf
    (64) pf -> . F pf
    (65) pf -> . X pf
    (66) pf -> . pf U pf
    (67) pf -> . NOT pf
    (68) pf -> . LB pf RB

    NAME            shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14
    G               shift and go to state 15
    F               shift and go to state 16
    X               shift and go to state 17
    NOT             shift and go to state 18
    LB              shift and go to state 19

    pf                             shift and go to state 29

state 16

    (64) pf -> F . pf
    (56) pf -> . NAME
    (57) pf -> . TRUE
    (58) pf -> . FALSE
    (59) pf -> . pf OR pf
    (60) pf -> . pf AND pf
    (61) pf -> . pf IMPLIES pf
    (62) pf -> . pf IFF pf
    (63) pf -> . G pf
    (64) pf -> . F pf
    (65) pf -> . X pf
    (66) pf -> . pf U pf
    (67) pf -> . NOT pf
    (68) pf -> . LB pf RB

    NAME            shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14
    G               shift and go to state 15
    F               shift and go to state 16
    X               shift and go to state 17
    NOT             shift and go to state 18
    LB              shift and go to state 19

    pf                             shift and go to state 30

state 17

    (65) pf -> X . pf
    (56) pf -> . NAME
    (57) pf -> . TRUE
    (58) pf -> . FALSE
    (59) pf -> . pf OR pf
    (60) pf -> . pf AND pf
    (61) pf -> . pf IMPLIES pf
    (62) pf -> . pf IFF pf
    (63) pf -> . G pf
    (64) pf -> . F pf
    (65) pf -> . X pf
    (66) pf -> . pf U pf
    (67) pf -> . NOT pf
    (68) pf -> . LB pf RB

    NAME            shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14
    G               shift and go to state 15
    F               shift and go to state 16
    X               shift and go to state 17
    NOT             shift and go to state 18
    LB              shift and go to state 19

    pf                             shift and go to state 31

state 18

    (67) pf -> NOT . pf
    (56) pf -> . NAME
    (57) pf -> . TRUE
    (58) pf -> . FALSE
    (59) pf -> . pf OR pf
    (60) pf -> . pf AND pf
    (61) pf -> . pf IMPLIES pf
    (62) pf -> . pf IFF pf
    (63) pf -> . G pf
    (64) pf -> . F pf
    (65) pf -> . X pf
    (66) pf -> . pf U pf
    (67) pf -> . NOT pf
    (68) pf -> . LB pf RB

    NAME            shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14
    G               shift and go to state 15
    F               shift and go to state 16
    X               shift and go to state 17
    NOT             shift and go to state 18
    LB              shift and go to state 19

    pf                             shift and go to state 32

state 19

    (68) pf -> LB . pf RB
    (56) pf -> . NAME
    (57) pf -> . TRUE
    (58) pf -> . FALSE
    (59) pf -> . pf OR pf
    (60) pf -> . pf AND pf
    (61) pf -> . pf IMPLIES pf
    (62) pf -> . pf IFF pf
    (63) pf -> . G pf
    (64) pf -> . F pf
    (65) pf -> . X pf
    (66) pf -> . pf U pf
    (67) pf -> . NOT pf
    (68) pf -> . LB pf RB

    NAME            shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14
    G               shift and go to state 15
    F               shift and go to state 16
    X               shift and go to state 17
    NOT             shift and go to state 18
    LB              shift and go to state 19

    pf                             shift and go to state 33

state 20

    (5) var_y -> NAME .

    INIT            reduce using rule 5 (var_y -> NAME .)
    COMMA           reduce using rule 5 (var_y -> NAME .)


state 21

    (1) input -> MODULE NAME CONTROL var_y . INIT init_y UPDATE update_y GOAL goal_form
    (6) var_y -> var_y . COMMA var_y

    INIT            shift and go to state 34
    COMMA           shift and go to state 35


state 22

    (2) input -> MODULE ENVIRONMENT CONTROL var_y . INIT init_y UPDATE update_y
    (6) var_y -> var_y . COMMA var_y

    INIT            shift and go to state 36
    COMMA           shift and go to state 35


state 23

    (55) prop_form -> DCOL pf SEMICOLON .

    PROPF           reduce using rule 55 (prop_form -> DCOL pf SEMICOLON .)
    MODULE          reduce using rule 55 (prop_form -> DCOL pf SEMICOLON .)
    $end            reduce using rule 55 (prop_form -> DCOL pf SEMICOLON .)


state 24

    (59) pf -> pf OR . pf
    (56) pf -> . NAME
    (57) pf -> . TRUE
    (58) pf -> . FALSE
    (59) pf -> . pf OR pf
    (60) pf -> . pf AND pf
    (61) pf -> . pf IMPLIES pf
    (62) pf -> . pf IFF pf
    (63) pf -> . G pf
    (64) pf -> . F pf
    (65) pf -> . X pf
    (66) pf -> . pf U pf
    (67) pf -> . NOT pf
    (68) pf -> . LB pf RB

    NAME            shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14
    G               shift and go to state 15
    F               shift and go to state 16
    X               shift and go to state 17
    NOT             shift and go to state 18
    LB              shift and go to state 19

    pf                             shift and go to state 37

state 25

    (60) pf -> pf AND . pf
    (56) pf -> . NAME
    (57) pf -> . TRUE
    (58) pf -> . FALSE
    (59) pf -> . pf OR pf
    (60) pf -> . pf AND pf
    (61) pf -> . pf IMPLIES pf
    (62) pf -> . pf IFF pf
    (63) pf -> . G pf
    (64) pf -> . F pf
    (65) pf -> . X pf
    (66) pf -> . pf U pf
    (67) pf -> . NOT pf
    (68) pf -> . LB pf RB

    NAME            shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14
    G               shift and go to state 15
    F               shift and go to state 16
    X               shift and go to state 17
    NOT             shift and go to state 18
    LB              shift and go to state 19

    pf                             shift and go to state 38

state 26

    (61) pf -> pf IMPLIES . pf
    (56) pf -> . NAME
    (57) pf -> . TRUE
    (58) pf -> . FALSE
    (59) pf -> . pf OR pf
    (60) pf -> . pf AND pf
    (61) pf -> . pf IMPLIES pf
    (62) pf -> . pf IFF pf
    (63) pf -> . G pf
    (64) pf -> . F pf
    (65) pf -> . X pf
    (66) pf -> . pf U pf
    (67) pf -> . NOT pf
    (68) pf -> . LB pf RB

    NAME            shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14
    G               shift and go to state 15
    F               shift and go to state 16
    X               shift and go to state 17
    NOT             shift and go to state 18
    LB              shift and go to state 19

    pf                             shift and go to state 39

state 27

    (62) pf -> pf IFF . pf
    (56) pf -> . NAME
    (57) pf -> . TRUE
    (58) pf -> . FALSE
    (59) pf -> . pf OR pf
    (60) pf -> . pf AND pf
    (61) pf -> . pf IMPLIES pf
    (62) pf -> . pf IFF pf
    (63) pf -> . G pf
    (64) pf -> . F pf
    (65) pf -> . X pf
    (66) pf -> . pf U pf
    (67) pf -> . NOT pf
    (68) pf -> . LB pf RB

    NAME            shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14
    G               shift and go to state 15
    F               shift and go to state 16
    X               shift and go to state 17
    NOT             shift and go to state 18
    LB              shift and go to state 19

    pf                             shift and go to state 40

state 28

    (66) pf -> pf U . pf
    (56) pf -> . NAME
    (57) pf -> . TRUE
    (58) pf -> . FALSE
    (59) pf -> . pf OR pf
    (60) pf -> . pf AND pf
    (61) pf -> . pf IMPLIES pf
    (62) pf -> . pf IFF pf
    (63) pf -> . G pf
    (64) pf -> . F pf
    (65) pf -> . X pf
    (66) pf -> . pf U pf
    (67) pf -> . NOT pf
    (68) pf -> . LB pf RB

    NAME            shift and go to state 12
    TRUE            shift and go to state 13
    FALSE           shift and go to state 14
    G               shift and go to state 15
    F               shift and go to state 16
    X               shift and go to state 17
    NOT             shift and go to state 18
    LB              shift and go to state 19

    pf                             shift and go to state 41

state 29

    (63) pf -> G pf .
    (59) pf -> pf . OR pf
    (60) pf -> pf . AND pf
    (61) pf -> pf . IMPLIES pf
    (62) pf -> pf . IFF pf
    (66) pf -> pf . U pf

  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for IMPLIES resolved as shift
  ! shift/reduce conflict for IFF resolved as shift
  ! shift/reduce conflict for U resolved as shift
    SEMICOLON       reduce using rule 63 (pf -> G pf .)
    RB              reduce using rule 63 (pf -> G pf .)
    OR              shift and go to state 24
    AND             shift and go to state 25
    IMPLIES         shift and go to state 26
    IFF             shift and go to state 27
    U               shift and go to state 28

  ! OR              [ reduce using rule 63 (pf -> G pf .) ]
  ! AND             [ reduce using rule 63 (pf -> G pf .) ]
  ! IMPLIES         [ reduce using rule 63 (pf -> G pf .) ]
  ! IFF             [ reduce using rule 63 (pf -> G pf .) ]
  ! U               [ reduce using rule 63 (pf -> G pf .) ]


state 30

    (64) pf -> F pf .
    (59) pf -> pf . OR pf
    (60) pf -> pf . AND pf
    (61) pf -> pf . IMPLIES pf
    (62) pf -> pf . IFF pf
    (66) pf -> pf . U pf

  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for IMPLIES resolved as shift
  ! shift/reduce conflict for IFF resolved as shift
  ! shift/reduce conflict for U resolved as shift
    SEMICOLON       reduce using rule 64 (pf -> F pf .)
    RB              reduce using rule 64 (pf -> F pf .)
    OR              shift and go to state 24
    AND             shift and go to state 25
    IMPLIES         shift and go to state 26
    IFF             shift and go to state 27
    U               shift and go to state 28

  ! OR              [ reduce using rule 64 (pf -> F pf .) ]
  ! AND             [ reduce using rule 64 (pf -> F pf .) ]
  ! IMPLIES         [ reduce using rule 64 (pf -> F pf .) ]
  ! IFF             [ reduce using rule 64 (pf -> F pf .) ]
  ! U               [ reduce using rule 64 (pf -> F pf .) ]


state 31

    (65) pf -> X pf .
    (59) pf -> pf . OR pf
    (60) pf -> pf . AND pf
    (61) pf -> pf . IMPLIES pf
    (62) pf -> pf . IFF pf
    (66) pf -> pf . U pf

  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for IMPLIES resolved as shift
  ! shift/reduce conflict for IFF resolved as shift
  ! shift/reduce conflict for U resolved as shift
    SEMICOLON       reduce using rule 65 (pf -> X pf .)
    RB              reduce using rule 65 (pf -> X pf .)
    OR              shift and go to state 24
    AND             shift and go to state 25
    IMPLIES         shift and go to state 26
    IFF             shift and go to state 27
    U               shift and go to state 28

  ! OR              [ reduce using rule 65 (pf -> X pf .) ]
  ! AND             [ reduce using rule 65 (pf -> X pf .) ]
  ! IMPLIES         [ reduce using rule 65 (pf -> X pf .) ]
  ! IFF             [ reduce using rule 65 (pf -> X pf .) ]
  ! U               [ reduce using rule 65 (pf -> X pf .) ]


state 32

    (67) pf -> NOT pf .
    (59) pf -> pf . OR pf
    (60) pf -> pf . AND pf
    (61) pf -> pf . IMPLIES pf
    (62) pf -> pf . IFF pf
    (66) pf -> pf . U pf

    SEMICOLON       reduce using rule 67 (pf -> NOT pf .)
    OR              reduce using rule 67 (pf -> NOT pf .)
    AND             reduce using rule 67 (pf -> NOT pf .)
    IMPLIES         reduce using rule 67 (pf -> NOT pf .)
    IFF             reduce using rule 67 (pf -> NOT pf .)
    U               reduce using rule 67 (pf -> NOT pf .)
    RB              reduce using rule 67 (pf -> NOT pf .)

  ! OR              [ shift and go to state 24 ]
  ! AND             [ shift and go to state 25 ]
  ! IMPLIES         [ shift and go to state 26 ]
  ! IFF             [ shift and go to state 27 ]
  ! U               [ shift and go to state 28 ]


state 33

    (68) pf -> LB pf . RB
    (59) pf -> pf . OR pf
    (60) pf -> pf . AND pf
    (61) pf -> pf . IMPLIES pf
    (62) pf -> pf . IFF pf
    (66) pf -> pf . U pf

    RB              shift and go to state 42
    OR              shift and go to state 24
    AND             shift and go to state 25
    IMPLIES         shift and go to state 26
    IFF             shift and go to state 27
    U               shift and go to state 28


state 34

    (1) input -> MODULE NAME CONTROL var_y INIT . init_y UPDATE update_y GOAL goal_form
    (7) init_y -> . DCOL init_command
    (8) init_y -> . init_y DCOL init_command

    DCOL            shift and go to state 44

    init_y                         shift and go to state 43

state 35

    (6) var_y -> var_y COMMA . var_y
    (5) var_y -> . NAME
    (6) var_y -> . var_y COMMA var_y

    NAME            shift and go to state 20

    var_y                          shift and go to state 45

state 36

    (2) input -> MODULE ENVIRONMENT CONTROL var_y INIT . init_y UPDATE update_y
    (7) init_y -> . DCOL init_command
    (8) init_y -> . init_y DCOL init_command

    DCOL            shift and go to state 44

    init_y                         shift and go to state 46

state 37

    (59) pf -> pf OR pf .
    (59) pf -> pf . OR pf
    (60) pf -> pf . AND pf
    (61) pf -> pf . IMPLIES pf
    (62) pf -> pf . IFF pf
    (66) pf -> pf . U pf

    SEMICOLON       reduce using rule 59 (pf -> pf OR pf .)
    OR              reduce using rule 59 (pf -> pf OR pf .)
    AND             reduce using rule 59 (pf -> pf OR pf .)
    IMPLIES         reduce using rule 59 (pf -> pf OR pf .)
    IFF             reduce using rule 59 (pf -> pf OR pf .)
    U               reduce using rule 59 (pf -> pf OR pf .)
    RB              reduce using rule 59 (pf -> pf OR pf .)

  ! OR              [ shift and go to state 24 ]
  ! AND             [ shift and go to state 25 ]
  ! IMPLIES         [ shift and go to state 26 ]
  ! IFF             [ shift and go to state 27 ]
  ! U               [ shift and go to state 28 ]


state 38

    (60) pf -> pf AND pf .
    (59) pf -> pf . OR pf
    (60) pf -> pf . AND pf
    (61) pf -> pf . IMPLIES pf
    (62) pf -> pf . IFF pf
    (66) pf -> pf . U pf

    SEMICOLON       reduce using rule 60 (pf -> pf AND pf .)
    OR              reduce using rule 60 (pf -> pf AND pf .)
    AND             reduce using rule 60 (pf -> pf AND pf .)
    IMPLIES         reduce using rule 60 (pf -> pf AND pf .)
    IFF             reduce using rule 60 (pf -> pf AND pf .)
    U               reduce using rule 60 (pf -> pf AND pf .)
    RB              reduce using rule 60 (pf -> pf AND pf .)

  ! OR              [ shift and go to state 24 ]
  ! AND             [ shift and go to state 25 ]
  ! IMPLIES         [ shift and go to state 26 ]
  ! IFF             [ shift and go to state 27 ]
  ! U               [ shift and go to state 28 ]


state 39

    (61) pf -> pf IMPLIES pf .
    (59) pf -> pf . OR pf
    (60) pf -> pf . AND pf
    (61) pf -> pf . IMPLIES pf
    (62) pf -> pf . IFF pf
    (66) pf -> pf . U pf

    SEMICOLON       reduce using rule 61 (pf -> pf IMPLIES pf .)
    IMPLIES         reduce using rule 61 (pf -> pf IMPLIES pf .)
    IFF             reduce using rule 61 (pf -> pf IMPLIES pf .)
    U               reduce using rule 61 (pf -> pf IMPLIES pf .)
    RB              reduce using rule 61 (pf -> pf IMPLIES pf .)
    OR              shift and go to state 24
    AND             shift and go to state 25

  ! OR              [ reduce using rule 61 (pf -> pf IMPLIES pf .) ]
  ! AND             [ reduce using rule 61 (pf -> pf IMPLIES pf .) ]
  ! IMPLIES         [ shift and go to state 26 ]
  ! IFF             [ shift and go to state 27 ]
  ! U               [ shift and go to state 28 ]


state 40

    (62) pf -> pf IFF pf .
    (59) pf -> pf . OR pf
    (60) pf -> pf . AND pf
    (61) pf -> pf . IMPLIES pf
    (62) pf -> pf . IFF pf
    (66) pf -> pf . U pf

    SEMICOLON       reduce using rule 62 (pf -> pf IFF pf .)
    IMPLIES         reduce using rule 62 (pf -> pf IFF pf .)
    IFF             reduce using rule 62 (pf -> pf IFF pf .)
    U               reduce using rule 62 (pf -> pf IFF pf .)
    RB              reduce using rule 62 (pf -> pf IFF pf .)
    OR              shift and go to state 24
    AND             shift and go to state 25

  ! OR              [ reduce using rule 62 (pf -> pf IFF pf .) ]
  ! AND             [ reduce using rule 62 (pf -> pf IFF pf .) ]
  ! IMPLIES         [ shift and go to state 26 ]
  ! IFF             [ shift and go to state 27 ]
  ! U               [ shift and go to state 28 ]


state 41

    (66) pf -> pf U pf .
    (59) pf -> pf . OR pf
    (60) pf -> pf . AND pf
    (61) pf -> pf . IMPLIES pf
    (62) pf -> pf . IFF pf
    (66) pf -> pf . U pf

  ! shift/reduce conflict for OR resolved as shift
  ! shift/reduce conflict for AND resolved as shift
  ! shift/reduce conflict for IMPLIES resolved as shift
  ! shift/reduce conflict for IFF resolved as shift
  ! shift/reduce conflict for U resolved as shift
    SEMICOLON       reduce using rule 66 (pf -> pf U pf .)
    RB              reduce using rule 66 (pf -> pf U pf .)
    OR              shift and go to state 24
    AND             shift and go to state 25
    IMPLIES         shift and go to state 26
    IFF             shift and go to state 27
    U               shift and go to state 28

  ! OR              [ reduce using rule 66 (pf -> pf U pf .) ]
  ! AND             [ reduce using rule 66 (pf -> pf U pf .) ]
  ! IMPLIES         [ reduce using rule 66 (pf -> pf U pf .) ]
  ! IFF             [ reduce using rule 66 (pf -> pf U pf .) ]
  ! U               [ reduce using rule 66 (pf -> pf U pf .) ]


state 42

    (68) pf -> LB pf RB .

    SEMICOLON       reduce using rule 68 (pf -> LB pf RB .)
    OR              reduce using rule 68 (pf -> LB pf RB .)
    AND             reduce using rule 68 (pf -> LB pf RB .)
    IMPLIES         reduce using rule 68 (pf -> LB pf RB .)
    IFF             reduce using rule 68 (pf -> LB pf RB .)
    U               reduce using rule 68 (pf -> LB pf RB .)
    RB              reduce using rule 68 (pf -> LB pf RB .)


state 43

    (1) input -> MODULE NAME CONTROL var_y INIT init_y . UPDATE update_y GOAL goal_form
    (8) init_y -> init_y . DCOL init_command

    UPDATE          shift and go to state 47
    DCOL            shift and go to state 48


state 44

    (7) init_y -> DCOL . init_command
    (9) init_command -> . init_condition ASSIGN init_next_state
    (10) init_condition -> . TRUE

    TRUE            shift and go to state 51

    init_command                   shift and go to state 49
    init_condition                 shift and go to state 50

state 45

    (6) var_y -> var_y COMMA var_y .
    (6) var_y -> var_y . COMMA var_y

  ! shift/reduce conflict for COMMA resolved as shift
    INIT            reduce using rule 6 (var_y -> var_y COMMA var_y .)
    COMMA           shift and go to state 35

  ! COMMA           [ reduce using rule 6 (var_y -> var_y COMMA var_y .) ]


state 46

    (2) input -> MODULE ENVIRONMENT CONTROL var_y INIT init_y . UPDATE update_y
    (8) init_y -> init_y . DCOL init_command

    UPDATE          shift and go to state 52
    DCOL            shift and go to state 48


state 47

    (1) input -> MODULE NAME CONTROL var_y INIT init_y UPDATE . update_y GOAL goal_form
    (16) update_y -> . DCOL update_command
    (17) update_y -> . update_y DCOL update_command

    DCOL            shift and go to state 54

    update_y                       shift and go to state 53

state 48

    (8) init_y -> init_y DCOL . init_command
    (9) init_command -> . init_condition ASSIGN init_next_state
    (10) init_condition -> . TRUE

    TRUE            shift and go to state 51

    init_command                   shift and go to state 55
    init_condition                 shift and go to state 50

state 49

    (7) init_y -> DCOL init_command .

    UPDATE          reduce using rule 7 (init_y -> DCOL init_command .)
    DCOL            reduce using rule 7 (init_y -> DCOL init_command .)


state 50

    (9) init_command -> init_condition . ASSIGN init_next_state

    ASSIGN          shift and go to state 56


state 51

    (10) init_condition -> TRUE .

    ASSIGN          reduce using rule 10 (init_condition -> TRUE .)


state 52

    (2) input -> MODULE ENVIRONMENT CONTROL var_y INIT init_y UPDATE . update_y
    (16) update_y -> . DCOL update_command
    (17) update_y -> . update_y DCOL update_command

    DCOL            shift and go to state 54

    update_y                       shift and go to state 57

state 53

    (1) input -> MODULE NAME CONTROL var_y INIT init_y UPDATE update_y . GOAL goal_form
    (17) update_y -> update_y . DCOL update_command

    GOAL            shift and go to state 58
    DCOL            shift and go to state 59


state 54

    (16) update_y -> DCOL . update_command
    (15) update_command -> . update_condition ASSIGN update_next_state
    (18) update_condition -> . formula_guard
    (19) update_condition -> . update_condition COMMA update_condition
    (20) formula_guard -> . NAME
    (21) formula_guard -> . TRUE
    (22) formula_guard -> . FALSE
    (23) formula_guard -> . formula_guard OR formula_guard
    (24) formula_guard -> . formula_guard AND formula_guard
    (25) formula_guard -> . formula_guard IMPLIES formula_guard
    (26) formula_guard -> . formula_guard IFF formula_guard
    (27) formula_guard -> . NOT formula_guard
    (28) formula_guard -> . LB formula_guard RB

    NAME            shift and go to state 63
    TRUE            shift and go to state 64
    FALSE           shift and go to state 65
    NOT             shift and go to state 66
    LB              shift and go to state 67
